--- a/weather-index.html
+++ b/weather-index.html
@@ -17,7 +17,9 @@
   <body>
     <div class="container">
       <h1>Hello world</h1>
-      <a href="" class="btn btn-primary">Click to say hello!</a>
+      <h2>checking vs code is talking to github</h2>
+
+      <a href="" class="btn btn-primary">Click to say hello! to Me</a>
     </div>
 
     <script src="src/weather-script.js"></script>
