working on main page
- back ground and the main container

--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
       crossorigin="anonymous"
     />
 
-    <title>Weather Final</title>
+    <title>🌈Weather Final- SDN🌦️</title>
   </head>
   <body>
     <div class="container">
-      <h1>Hello world</h1>
-      <h2>checking vs code is talking to github</h2>
-
-      <a href="" class="btn btn-primary">Click to say hello! to Me</a>
+      <div class="cardBack" style="max-width: 500px"></div>
     </div>
 
     <script src="src/weather-script.js"></script>
