updated end line

--- a/index.html
+++ b/index.html
@@ -52,5 +52,7 @@
     </div> end of container
 
     <script src="src/weather-script.js"></script>
+    <p id="coded-by"> This project was coded by <a href="# shecodes alumni pg"></a>Sharlene Nair and <a href="https://github.com/kerryblue14/Final-Project-Weather-SDN"> open-sourced on GitHub</a> and <a href="#">and hosted on Netlify.</a> </p>
+    <script src="src/index.js"></script>
   </body>
 </html>
