change weather icon
changed weather icon to change with location.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
             </ul>
             <div class="row">
               <div class="col-6">
-                <div class="current weather-temperature float-left">
+                <div class="current weather-temperature ">
                       <span> 
-                          <i class="fas fa-cloud-sun"></i><strong id= "temperature">13</strong> <small class="units"> <a href="#" id="celcius-link">℃</a> <small id="units-divider">|</small> <a href="#" id="fahrenheit-link">°F</a></small>
+                         <img src="http://openweathermap.org/img/wn/10d@2x.png"
+                         alt= "Clear"
+                         id="icon"
+                         class="float-left"
+                         ><strong id= "temperature">13</strong> <small class="units"> <a href="#" id="celcius-link">℃</a> <small id="units-divider">|</small> <a href="#" id="fahrenheit-link">°F</a></small>
                         </span>
                 </div>
               </div>
