tried to clean up the layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <form class="form-control" id= "city-selector">
               <div class="row">
                 <div class="col-6">
-                  <input type="search" class="form-control"  id= "search-input" placeholder="Please chose your city" autofocus="on" autocomplete="off" />
+                  <input type="search" class="form-control"  id= "search-input" placeholder="Type in the City" autofocus="on" autocomplete="off" />
                 </div>
                 <div class="col-2">
                   <input type="submit" class="btn btn-outline-primary" id= "search-form" placeholder="Search"  />    
@@ -54,13 +54,12 @@
             <div class="row">
               <div class="col-6">
                 <div class="current weather-temperature ">
-                      <span> 
-                         <img src="http://openweathermap.org/img/wn/10d@2x.png"
+                  <img src="http://openweathermap.org/img/wn/10d@2x.png"
                          alt= "Clear"
                          id="icon"
                          class="float-left"
-                         ><strong id= "temperature">13</strong> <small class="units"> <a href="#" id="celcius-link">℃</a> <small id="units-divider">|</small> <a href="#" id="fahrenheit-link">°F</a></small>
-                        </span>
+                         ><strong id= "temperature">13</strong>
+                  <span class="units"><a href="#" id="celcius-link">℃</a> <a id="units-divider">|</a> <a href="#" id="fahrenheit-link">°F</a> </span>             </span>    
                 </div>
               </div>
               
