--- a/index.html
+++ b/index.html
@@ -101,13 +101,11 @@
             </div>
           </div>
         </div>
-      </br>
       </div> end of the background shadow
     </div> end of container
 
     <script src="src/weather-script.js"></script>
-
-    <p id="coded-by"> This project was coded by <a href="# shecodes alumni pg"></a>Sharlene Nair and <a href="https://github.com/kerryblue14/Final-Project-Weather-SDN"> open-sourced </a> on GitHub and hosted on <a href="#"> Netlify.</a> </p>
+    <p id="coded-by"> This project was coded by <a href="# shecodes alumni pg"></a>Sharlene Nair and <a href="https://github.com/kerryblue14/Final-Project-Weather-SDN"> open-sourced </a> on GitHub and hosted on <a href="https://musing-hoover-691e67.netlify.app"> Netlify.</a> </p>
     
   </body>
 </html>
