--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               
               <div class="col-6 weather-factors"> 
                 <ul id =  "conditions">
-                  <li>Preciptation: 10%</li>
+                  <li>Preciptation: <span id="preciptation"></span>%</li>
                   <li>Humidity: <span id="humidity"></span>%</li>
                   <li>Wind Speed: <span id ="speed"></span> kmph</li>
                 </ul> 
@@ -105,7 +105,7 @@
     </div> end of container
 
     <script src="src/weather-script.js"></script>
-    <p id="coded-by"> This project was coded by <a href="# shecodes alumni pg"></a>Sharlene Nair and <a href="https://github.com/kerryblue14/Final-Project-Weather-SDN"> open-sourced </a> on GitHub and hosted on <a href="https://musing-hoover-691e67.netlify.app"> Netlify.</a> </p>
+    <p id="coded-by"> This project was coded by <a href="# shecodes alumni pg"></a>Sharlene Nair and <a href="https://github.com/kerryblue14/Final-Project-Weather-SDN" target="_blank"> open-sourced </a> on GitHub and hosted on <a href="https://musing-hoover-691e67.netlify.app " target="_blank"> Netlify.</a> </p>
     
   </body>
 </html>
