--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             <div class="row">
               <div class="col-6">
                 <div class="current weather-temperature ">
-                  <img src="http://openweathermap.org/img/wn/10d@2x.png"
+                  <img src="https://openweathermap.org/img/wn/10d@2x.png"
                          alt= "Clear"
                          id="icon"
                          class="float-left"
                          ><strong id= "temperature">13</strong>
-                  <span class="units"><a href="#" id="celcius-link">℃</a> <a id="units-divider">|</a> <a href="#" id="fahrenheit-link">°F</a> </span>             </span>    
+                  <span class="units"><a href="#" class="working" id="celcius-link">℃</a> <a id="units-divider">|</a> <a href="#" id="fahrenheit-link">°F</a> </span>             </span>    
                 </div>
               </div>
               
