--- a/index.html
+++ b/index.html
@@ -70,92 +70,14 @@
                   <li>Wind Speed: <span id ="speed"></span> kmph</li>
                 </ul> 
               </div>    
-              
-            </div>
+           </div>
           </div>
         </div> 
         </br> 
         <div class="row bg justify-content-center">
-          <div class="forecast">
-            <div class="row align-items-start">
-              <div class="col-2">
-                <ul id="forecast-day3">
-                    <li><img src="https://openweathermap.org/img/wn/10d@2x.png"
-                        alt= "Clear"
-                        id="iconFuture"
-                        class="float-center">
-                    </li>
-                    <li>Tommorow</li>
-                    <li>description</li>
-                    <li> <span><a id="temp-max">tmx</a> |
-                    <a id="temp-min">tmn</a></span></li>
-                  </ul>                            
-              </div>
-              <div class="col-2">
-                <ul id="forecast-day4">
-                    <li><img src="https://openweathermap.org/img/wn/10d@2x.png"
-                        alt= "Clear"
-                        id="iconFuture"
-                        class="float-center">
-                    </li>
-                    <li> Day 4</li>
-                    <li>description</li>
-                    <li><span><a id="temp-max">tmx</a> |
-                    <a id="temp-min">tmn</a></span></li>
-                  </ul>          
-              </div>
-              <div class="col-2">
-                <ul id="forecast-day5">
-                    <li><img src="https://openweathermap.org/img/wn/10d@2x.png"
-                        alt= "Clear"
-                        id="iconFuture"
-                        class="float-center">
-                    </li>
-                    <li> Day 5</li>
-                    <li>description</li>
-                    <li><span><a id="temp-max">tmx</a> |
-                    <a id="temp-min">tmn</a></span></li>
-                  </ul>
-              </div>
-              <div class="col-2">
-                 <ul id="forecast-day6">
-                    <li><img src="https://openweathermap.org/img/wn/10d@2x.png"
-                        alt= "Clear"
-                        id="iconFuture"
-                        class="float-center">
-                    </li>
-                    <li> Day 6</li>
-                    <li>description</li>
-                    <li><span><a id="temp-max">tmx</a> |
-                    <a id="temp-min">tmn</a></span></li>
-                  </ul>
-              </div>
-              <div class="col-2">
-                <ul id="forecast-day7">
-                    <li><img src="https://openweathermap.org/img/wn/10d@2x.png"
-                        alt= "Clear"
-                        id="iconFuture"
-                        class="float-center">
-                    </li>
-                    <li> Day 7</li>
-                    <li>description</li>
-                    <li><span><a id="temp-max">tmx</a> |
-                    <a id="temp-min">tmn</a></span></li>
-                  </ul>
-              </div>
-              <div class="col-2">
-                 <ul id="forecast-day8">
-                    <li><img src="https://openweathermap.org/img/wn/10d@2x.png"
-                        alt= "Clear"
-                        id="iconFuture"
-                        class="float-center">
-                    </li>
-                    <li> Day 8</li>
-                    <li>description</li>
-                    <li><span><a id="temp-max">tmx</a> |
-                    <a id="temp-min">tmn</a></span></li>
-                  </ul>
-              </div>
+          <div class="forecast" id="weatherforecast">
+            <div class="row align-items-start float">
+                          
             </div>
           </div>
         </div>
