clean up of code

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </br> 
         <div class="row bg justify-content-center">
           <div class="forecast" id="weatherforecast">
-            <div class="row align-items-start float">
+            <div class="row align-items-start ">
                           
             </div>
           </div>
