--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </div>
           </div>
         </div>
-      </div> end of the background shadow
-    </div> end of container
+      </div> 
+    </div> 
 
     <script src="src/weather-script.js"></script>
     <p id="coded-by"> This project was coded by <a href="# shecodes alumni pg"></a>Sharlene Nair and <a href="https://github.com/kerryblue14/Final-Project-Weather-SDN" target="_blank"> open-sourced </a> on GitHub and hosted on <a href="https://musing-hoover-691e67.netlify.app " target="_blank"> Netlify.</a> </p>
