adjusted the forecast and sizing on screen (desktop)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <body>
     <div class="container-fluid">
       </br>
+      </br>
+      </br>
       <div class="cardBack" id= "shadow">
         <div class="row bg justify-content-center " >
           <div class="col">
@@ -75,16 +77,14 @@
         </div> 
         </br> 
         <div class="row bg justify-content-center">
-          <div class="forecast" id="weatherforecast">
-            <div class="row align-items-start ">
-                          
-            </div>
+          <div class=" row align-items-start forecast" id="weatherforecast">
           </div>
         </div>
       </div> 
     </div> 
 
     <script src="src/weather-script.js"></script>
+  
     <p id="coded-by"> This project was coded by <a href="# shecodes alumni pg"></a>Sharlene Nair and <a href="https://github.com/kerryblue14/Final-Project-Weather-SDN" target="_blank"> open-sourced </a> on GitHub and hosted on <a href="https://musing-hoover-691e67.netlify.app " target="_blank"> Netlify.</a> </p>
     
   </body>
