--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <script src="src/weather-script.js"></script>
   
-    <p id="coded-by"> This project was coded by <a href="# shecodes alumni pg"></a>Sharlene Nair and <a href="https://github.com/kerryblue14/Final-Project-Weather-SDN" target="_blank"> open-sourced </a> on GitHub.</a> </p>
+    <p id="coded-by"> This project was coded by <a href="https://www.shecodes.io/students/250-sharlene-nair"></a>Sharlene Nair and <a href="https://github.com/kerryblue14/Final-Project-Weather-SDN" target="_blank"> open-sourced </a> on GitHub.</a> </p>
     
   </body>
 </html>
